--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node src/server/index.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "firebase": "^10.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
