--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "firebase": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "normalize.css": "^8.0.1",
