--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-tabs": "^6.0.2",
     "sass": "^1.65.1"
   },
   "devDependencies": {
