--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "server": "node src/server/index.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
